--- a/src/components/App.module.css
+++ b/src/components/App.module.css
@@ -1,3 +1,6 @@
+@import url(./Modal/Modal.module.css);
+@import url(./Loader/Loader.module.css);
+
 html {
   box-sizing: border-box;
   width: 100vw;
@@ -35,7 +38,12 @@ img {
   grid-gap: 16px;
   padding-bottom: 24px;
 }
-
+.Container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 30px;
+}
 /*
    * Стили компонента Searchbar
    */
@@ -43,7 +51,7 @@ img {
   top: 0;
   left: 0;
   position: sticky;
-  z-index: 1100;
+  z-index: 990;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -53,7 +61,7 @@ img {
   padding-top: 12px;
   padding-bottom: 12px;
   color: #fff;
-  background-color: #3f51b5;
+  background-color: #3f51b580;
   box-shadow: 0px 2px 4px -1px rgba(0, 0, 0, 0.2),
     0px 4px 5px 0px rgba(0, 0, 0, 0.14), 0px 1px 10px 0px rgba(0, 0, 0, 0.12);
 }
@@ -65,7 +73,8 @@ img {
   display: flex;
   align-items: center;
   width: 100%;
-  max-width: 600px;
+  max-width: 450px;
+  height: 40px;
   background-color: #fff;
   border-radius: 3px;
   overflow: hidden;
@@ -73,7 +82,7 @@ img {
 
 .SearchForm-button {
   display: inline-block;
-  width: 48px;
+  width: 58px;
   height: 48px;
   border: 0;
   background-image: url('https://image.flaticon.com/icons/svg/149/149852.svg');
@@ -90,27 +99,16 @@ img {
   opacity: 1;
 }
 
-.SearchForm-button-label {
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  padding: 0;
-  overflow: hidden;
-  clip: rect(0, 0, 0, 0);
-  white-space: nowrap;
-  clip-path: inset(50%);
-  border: 0;
-}
-
 .SearchForm-input {
   display: inline-block;
-  width: 100%;
+  width: 80%;
   font: inherit;
-  font-size: 20px;
+  font-size: 18px;
   border: none;
   outline: none;
   padding-left: 4px;
   padding-right: 4px;
+  margin-left: 10px;
 }
 
 .SearchForm-input::placeholder {
@@ -122,10 +120,11 @@ img {
    * Стили компонента ImageGallery
    */
 .ImageGallery {
-  display: grid;
-  max-width: calc(100vw - 48px);
-  grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
-  grid-gap: 16px;
+  margin: 80px 0 20px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 10px;
   margin-top: 0;
   margin-bottom: 0;
   padding: 0;
@@ -138,6 +137,7 @@ img {
    * Стили компонента ImageGalleryItem
    */
 .ImageGalleryItem {
+  width: 300px;
   border-radius: 2px;
   box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.2),
     0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 2px 1px -1px rgba(0, 0, 0, 0.12);
@@ -147,11 +147,9 @@ img {
   width: 100%;
   height: 260px;
   object-fit: cover;
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .ImageGalleryItem-image:hover {
-  transform: scale(1.03);
   cursor: zoom-in;
 }
 
@@ -169,7 +167,7 @@ img {
   justify-content: center;
   align-items: center;
   background-color: rgba(0, 0, 0, 0.8);
-  z-index: 1200;
+  z-index: 3000;
 }
 
 .Modal {
@@ -197,6 +195,7 @@ img {
   font-style: normal;
   font-weight: 500;
   min-width: 180px;
+  max-width: 300px;
   box-shadow: 0px 3px 1px -2px rgba(0, 0, 0, 0.2),
     0px 2px 2px 0px rgba(0, 0, 0, 0.14), 0px 1px 5px 0px rgba(0, 0, 0, 0.12);
 }
