--- a/src/components/App.module.css
+++ b/src/components/App.module.css
@@ -1,5 +1,9 @@
 @import url(./Modal/Modal.module.css);
 @import url(./Loader/Loader.module.css);
+@import url(./Button//Button.module.css);
+@import url(./ImageGallery/ImageGallery.module.css);
+@import url(./ImageGalleryItem/ImageGalleryItem.module.css);
+@import url(./Searchbar/Sarchbar.module.css);
 
 html {
   box-sizing: border-box;
@@ -21,17 +25,18 @@ body {
   background-color: #fff;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  position: relative;
+  padding-bottom: 40px;
 }
-
+p {
+  color: #fff;
+}
 img {
   display: block;
   max-width: 100%;
   height: auto;
 }
 
-/*
-   * Стили компонента App
-   */
 .App {
   display: grid;
   grid-template-columns: 1fr;
@@ -43,164 +48,4 @@ img {
   flex-direction: column;
   align-items: center;
   gap: 30px;
-}
-/*
-   * Стили компонента Searchbar
-   */
-.Searchbar {
-  top: 0;
-  left: 0;
-  position: sticky;
-  z-index: 990;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  min-height: 64px;
-  padding-right: 24px;
-  padding-left: 24px;
-  padding-top: 12px;
-  padding-bottom: 12px;
-  color: #fff;
-  background-color: #3f51b580;
-  box-shadow: 0px 2px 4px -1px rgba(0, 0, 0, 0.2),
-    0px 4px 5px 0px rgba(0, 0, 0, 0.14), 0px 1px 10px 0px rgba(0, 0, 0, 0.12);
-}
-
-/*
-   * Стили компонента SearchForm
-   */
-.SearchForm {
-  display: flex;
-  align-items: center;
-  width: 100%;
-  max-width: 450px;
-  height: 40px;
-  background-color: #fff;
-  border-radius: 3px;
-  overflow: hidden;
-}
-
-.SearchForm-button {
-  display: inline-block;
-  width: 58px;
-  height: 48px;
-  border: 0;
-  background-image: url('https://image.flaticon.com/icons/svg/149/149852.svg');
-  background-size: 40%;
-  background-repeat: no-repeat;
-  background-position: center;
-  opacity: 0.6;
-  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  cursor: pointer;
-  outline: none;
-}
-
-.SearchForm-button:hover {
-  opacity: 1;
-}
-
-.SearchForm-input {
-  display: inline-block;
-  width: 80%;
-  font: inherit;
-  font-size: 18px;
-  border: none;
-  outline: none;
-  padding-left: 4px;
-  padding-right: 4px;
-  margin-left: 10px;
-}
-
-.SearchForm-input::placeholder {
-  font: inherit;
-  font-size: 18px;
-}
-
-/*
-   * Стили компонента ImageGallery
-   */
-.ImageGallery {
-  margin: 80px 0 20px;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  gap: 10px;
-  margin-top: 0;
-  margin-bottom: 0;
-  padding: 0;
-  list-style: none;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-/*
-   * Стили компонента ImageGalleryItem
-   */
-.ImageGalleryItem {
-  width: 300px;
-  border-radius: 2px;
-  box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.2),
-    0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 2px 1px -1px rgba(0, 0, 0, 0.12);
-}
-
-.ImageGalleryItem-image {
-  width: 100%;
-  height: 260px;
-  object-fit: cover;
-}
-
-.ImageGalleryItem-image:hover {
-  cursor: zoom-in;
-}
-
-/*
-   * Стили компонента Modal
-   */
-
-.Overlay {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100vw;
-  height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: rgba(0, 0, 0, 0.8);
-  z-index: 3000;
-}
-
-.Modal {
-  max-width: calc(100vw - 48px);
-  max-height: calc(100vh - 24px);
-}
-
-/*
-  * Стили компонента Buton (Load more)
-  */
-.Button {
-  padding: 8px 16px;
-  border-radius: 2px;
-  background-color: #3f51b5;
-  transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  text-align: center;
-  display: inline-block;
-  color: #fff;
-  border: 0;
-  text-decoration: none;
-  cursor: pointer;
-  font-family: inherit;
-  font-size: 18px;
-  line-height: 24px;
-  font-style: normal;
-  font-weight: 500;
-  min-width: 180px;
-  max-width: 300px;
-  box-shadow: 0px 3px 1px -2px rgba(0, 0, 0, 0.2),
-    0px 2px 2px 0px rgba(0, 0, 0, 0.14), 0px 1px 5px 0px rgba(0, 0, 0, 0.12);
-}
-
-.Button:hover,
-.Button:focus {
-  background-color: #303f9f;
 }
